[gd_scene load_steps=7 format=3 uid="uid://donnippwm4yr4"]

[ext_resource type="Script" uid="uid://cvxkiq3f5es01" path="res://common/map.gd" id="1_fmkex"]

[sub_resource type="CircleShape2D" id="CircleShape2D_a8so1"]
radius = 9.0

[sub_resource type="SegmentShape2D" id="SegmentShape2D_a8so1"]
a = Vector2(-50, -50)
b = Vector2(50, -50)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_fmkex"]
a = Vector2(-50, -50)
b = Vector2(-50, 50)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_sxdkt"]
a = Vector2(50, -50)
b = Vector2(50, 50)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_i0ub7"]
a = Vector2(-50, 50)
b = Vector2(50, 50)

[node name="Map" type="Node2D"]
script = ExtResource("1_fmkex")

[node name="Pivot" type="StaticBody2D" parent="."]

[node name="Shape" type="CollisionShape2D" parent="Pivot"]
shape = SubResource("CircleShape2D_a8so1")

[node name="Body" type="RigidBody2D" parent="."]

[node name="OutTop" type="CollisionShape2D" parent="Body"]
shape = SubResource("SegmentShape2D_a8so1")

[node name="OutLeft" type="CollisionShape2D" parent="Body"]
shape = SubResource("SegmentShape2D_fmkex")

[node name="OutRight" type="CollisionShape2D" parent="Body"]
shape = SubResource("SegmentShape2D_sxdkt")

[node name="OutBottom" type="CollisionShape2D" parent="Body"]
shape = SubResource("SegmentShape2D_i0ub7")

[node name="Holder" type="CollisionPolygon2D" parent="Body"]
polygon = PackedVector2Array(10, 0, 7.07107, 7.07107, 6.12303e-16, 10, -7.07107, 7.07107, -10, 1.22461e-15, -7.07107, -7.07107, -1.83691e-15, -10, 7.07107, -7.07107, 10, 0, 15, -3.67382e-15, 10.6066, -10.6066, -2.75536e-15, -15, -10.6066, -10.6066, -15, 1.83691e-15, -10.6066, 10.6066, 9.18455e-16, 15, 10.6066, 10.6066, 15, 0)
